# functorial-physics

./: .gitignore  FunctorialCoherenceSymmetry.hs  FunctorialRenormalization.hs  Makefile  README.md  Unified-Quantum-Relativistic-Framework.lex  _config.yml  ai_convergence_physics.tex  categorical-qec-code.tex  cohomological_physics.tex  cohomological_physics_vs_string_theory.tex  derived_hamiltonians_unification.tex  derived_hamiltonians_unified_framework.tex  fermat_mazur_physics.tex  first-law-of-entanglement.tex  functorial_coherence_symmetry.tex  functorial_infinities_renormalization.tex  functorial_measurement_observer.tex  functorial_nonlocality.tex  functorial_physics_advantages_unification_frameworks.tex  functorial_physics_derived_hamiltonians.tex  functorial_physics_peer_review_summary.tex  functorial_physics_prototype_eq.tex  functorial_physics_testing.tex  functorial_physics_unification_advantages_deepseek.tex  functorial_physics_unification_advantages_gpt4.tex  functorial_quantum_gravity_schrodinger_relativity.tex  functorial_quantum_logic.tex  functorial_quantum_pipeline.tex  functorial_refined_schrodinger.tex  functorial_schrodinger_einstein.tex  functorial_unification.tex  functorial_unified_theory.tex  functorial_vs_gr.tex  index.html  modular_physics_unification.tex  peer-review-claude.txt  quantum_gravity_paper.tex
ai_model_convergence/: functorial_physics_ai_unification.tex  references_bib.tex
papers/: index.html
src/haskell/: UnifiedConceptualFramework.hs  functorial-physics.cabal
src/haskell/Core/: Measurement.hs  Nonlocality.hs  Spacetime.hs
(+31 files in other folders)
